--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,3 +19,18 @@ product_index:
     path: /product
     controller: App\Controller\ProductController::index
 
+app_register:
+    path: /register
+    controller: App\Controller\RegistrationController::register
+
+
+app_login:
+    path: /login
+    controller: App\Controller\SecurityController::login
+
+app_logout:
+    path: /logout
+    controller: App\Controller\SecurityController::logout
+
+    # config/routes.yaml
+
